--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,77 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
   margin: 0;
+  padding: 0;
+  background-color: #f6f6f6;
+}
+
+header{
+  background-color: #ebe2d6;
+  padding-left: 3rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+h1{
+  font-style: italic;
+  font-size: 3rem;
+  background-color: #ebe2d6;
+}
+
+header>p{
+  background-color: #ebe2d6;
+}
+
+main{
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-around;
+  margin-top: 3rem;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+
+.search-input {
+  width: 10rem;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.suggestions-list {
+  position: absolute;
+  width: 11rem;
+  border: 1px solid #ccc;
+  border-top: none;
+  border-radius: 0 0 4px 4px;
+  max-height: 150px;
+  overflow-y: auto;
+  background-color: white;
+  z-index: 1000;
+}
+
+.suggestion-item {
+  padding: 10px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.suggestion-item:hover {
+  background-color: #f0f0f0;
+}
+button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  background-color: #3498db; /* Couleur de fond initiale */
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.1s ease;
+}
+
+button:hover {
+  background-color: #2980b9; /* Couleur de fond au survol */
+}
+
+button:active {
+  transform: scale(1.1); /* Grossir au clic */
 }
